--- a/TestSwiftStoryboardTeam/Info.plist
+++ b/TestSwiftStoryboardTeam/Info.plist
@@ -95,5 +95,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>UIRequiresFullScreen</key>
+    <true/>
 </dict>
 </plist>
